Opened 16 years ago

Closed 16 years ago

#2688 closed bug (fixed)

lldiv is declared in stdlib.h, but not implemented (easy)

Reported by: kaliber Owned by: axeld
Priority: normal Milestone: R1
Component: System/libroot.so Version: R1/pre-alpha1
Keywords: Cc: andreas.faerber@…
Blocked By: Blocking:
Platform: All

Description

Function lldiv() is declared in headers/posix/stdlib.h, but not implemented in src/system/libroot/posix/stdlib/div.c

Change History (2)

comment:1 by andreasf, 16 years ago

Cc: andreas.faerber@… added

Salvatore was searching for unimplemented POSIX functions recently.

in reply to:  1 comment:2 by emitrax, 16 years ago

Resolution: fixed
Status: newclosed

Replying to andreasf:

Salvatore was searching for unimplemented POSIX functions recently.

Not what I had in mind. ;-)

Implemented in hrev27250.

Note: See TracTickets for help on using tickets.