* Updated license * Removed extraneous tabs * Implemented lldiv (#2688)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@27250 a95241bf-73f2-0310-859d-f6bbb57e9c96