src/system/libroot/posix/stdlib/div.c
@@ -14,10 +14,10 @@ div_t
 div(int numerator, int denominator)
 {
 	div_t val;
-	
+
 	val.quot = numerator / denominator;
 	val.rem  = numerator - denominator * val.quot;
-	
+
 	if (val.rem > 0 && val.quot < 0) {
 		val.rem -= denominator;
 		++val.quot;
@@ -31,10 +31,27 @@ ldiv_t
 ldiv(long numerator, long denominator)
 {
 	ldiv_t val;
-	
+
 	val.quot = numerator / denominator;
 	val.rem  = numerator - denominator * val.quot;
-	
+
+	if (val.rem > 0 && val.quot < 0) {
+		val.rem -= denominator;
+		++val.quot;
+	}
+
+	return val;
+}
+
+
+lldiv_t
+lldiv(long long numerator, long long denominator)
+{
+	lldiv_t val;
+
+	val.quot = numerator / denominator;
+	val.rem  = numerator - denominator * val.quot;
+
 	if (val.rem > 0 && val.quot < 0) {
 		val.rem -= denominator;
 		++val.quot;
